--- a/app/src/main/res/layout/activity_buscar_usuario.xml
+++ b/app/src/main/res/layout/activity_buscar_usuario.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".Buscar_Usuario">
 
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Buscar Usuario"
+        android:textColor="#000"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="39dp"
+        tools:layout_editor_absoluteY="75dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
