--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingLeft="25dp"
+    android:paddingRight="25dp"
     tools:context=".LoginActivity">
 
 
@@ -11,36 +13,39 @@
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
-        android:layout_marginBottom="22dp"
+        android:layout_marginTop="12dp"
         android:text="Iniciar sesión"
-        android:textColor="#000"
-        android:textSize="30sp"
+        android:textColor="@color/black"
+        android:textSize="24dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView10"
-        app:layout_constraintStart_toStartOf="@+id/textView" />
+        app:layout_constraintEnd_toEndOf="@+id/textView"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="173dp"
         android:layout_height="63dp"
-        android:layout_marginTop="66dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.107"
         app:srcCompat="@drawable/no" />
 
     <Button
         android:id="@+id/bttnInicio"
-        android:layout_width="130dp"
-        android:layout_height="76dp"
-        android:layout_marginBottom="52dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@drawable/btn_bg"
         android:text="Iniciar Sesión"
-        android:textColor="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText_password"
+        app:layout_constraintVertical_bias="0.204" />
 
     <TextView
         android:id="@+id/textView"
@@ -48,9 +53,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="23dp"
         android:text="¡Hola! Gusto en verte"
-        android:textSize="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
 
@@ -58,99 +62,97 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
+        android:layout_marginTop="44dp"
+        android:autoSizeTextType="uniform"
         android:text="¿Olvidaste tu contraseña?"
-        app:layout_constraintBaseline_toBaselineOf="@+id/forgottenPass"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/bttnInicio"
+        app:layout_constraintHorizontal_bias="0.538"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bttnInicio" />
 
     <TextView
         android:id="@+id/forgottenPass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginBottom="50dp"
-        android:backgroundTint="#00E91E63"
-        android:text="Pica aqui!"
-        android:textColor="#E91E47"
-        app:layout_constraintBottom_toTopOf="@+id/textView_register_now"
-        app:layout_constraintStart_toEndOf="@+id/textView2" />
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="44dp"
+        android:autoSizeTextType="uniform"
+        android:text="Da click"
+        android:textColor="@color/red"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/bttnInicio" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="42dp"
-        android:layout_marginEnd="42dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginTop="28dp"
         android:text="¿No tienes una cuenta?"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView_register_now"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:autoSizeTextType="uniform"
+        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView_register_now"
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:layout_marginStart="89dp"
-        android:layout_marginEnd="88dp"
-        android:text="Registrate aqui"
-        android:textColor="#C61438"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/forgotbtn" />
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="28dp"
+        android:text="Da click"
+        android:textColor="@color/red"
+        android:autoSizeTextType="uniform"
+        app:layout_constraintEnd_toEndOf="@+id/forgottenPass"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/forgottenPass" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="264dp"
         android:text="Correo Eléctronico"
-        android:textColor="#C61438"
-        app:layout_constraintStart_toStartOf="@+id/editText_email"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textColor="@color/red"
+        app:layout_constraintBottom_toTopOf="@+id/editText_email"
+        app:layout_constraintStart_toStartOf="@+id/editText_email" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="1dp"
         android:text="Contraseña"
-        android:textColor="#C61438"
+        android:textColor="@color/red"
         app:layout_constraintBottom_toTopOf="@+id/editText_password"
         app:layout_constraintStart_toStartOf="@+id/editText_password" />
 
     <EditText
         android:id="@+id/editText_email"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="20dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView10" />
+        app:layout_constraintTop_toBottomOf="@+id/textView12"
+        app:layout_constraintVertical_bias="0.114" />
 
     <EditText
         android:id="@+id/editText_password"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="125dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="125dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:autofillHints=""
         android:ems="10"
         android:hint="Contraseña"
         android:inputType="textPassword"
-        android:textColor="#020202"
-        android:textColorHint="#78909C"
-        app:layout_constraintBottom_toBottomOf="@+id/forgotbtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView12"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/editText_email"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/editText_email"
+        app:layout_constraintTop_toBottomOf="@+id/editText_email"
+        app:layout_constraintVertical_bias="0.095"
         tools:ignore="DuplicateSpeakableTextCheck" />
 
 
